[gd_scene load_steps=3 format=3 uid="uid://cowd8lww2sy4u"]

[ext_resource type="Texture2D" uid="uid://wi4qmpmkigos" path="res://assets/graphics/TitleScreen.png" id="1_mgcf3"]
[ext_resource type="Script" path="res://scene/menus/MainMenu.gd" id="1_rynt0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rynt0")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 40.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_mgcf3")

[node name="ButtonGroup" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -338.0
offset_right = 183.0
grow_vertical = 0
alignment = 1

[node name="NewGame" type="Button" parent="ButtonGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "New Game"
flat = true
alignment = 0

[node name="LoadGame" type="Button" parent="ButtonGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Load Game"
flat = true
alignment = 0

[node name="Settings" type="Button" parent="ButtonGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
flat = true
alignment = 0

[node name="Help" type="Button" parent="ButtonGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Help"
flat = true
alignment = 0

[node name="About" type="Button" parent="ButtonGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "About"
flat = true
alignment = 0

[node name="Exit" type="Button" parent="ButtonGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"
flat = true
alignment = 0

[connection signal="pressed" from="ButtonGroup/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ButtonGroup/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="ButtonGroup/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonGroup/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="ButtonGroup/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="ButtonGroup/Exit" to="." method="_on_exit_pressed"]
