extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

#===============================================================================
# START: BUTTONS
#===============================================================================

func _on_new_game_pressed():
	pass # Replace with function body.


func _on_load_game_pressed():
	pass # Replace with function body.


func _on_settings_pressed():
	pass # Replace with function body.


func _on_help_pressed():
	pass # Replace with function body.


func _on_about_pressed():
	pass # Replace with function body.


func _on_exit_pressed():
	get_tree().quit()

#===============================================================================
# END: BUTTONS
#===============================================================================
